2001-08-28  Lance Levsen  <l.levsen@printwest.com>

	* config/Makefile.am: Added a variable substitution from
	configure.in to stop overwriting the config files.

	* configure.in: Added --enable-overwrite flag that enables the
	overwriting of configure files. Default is no overwrite, but does
	check for missing files.
	
2001-08-27  jeff b  <jeff@univrel.pr.uconn.edu>

	Released 1.5pre7

2001-08-21  jeff b  <jeff@univrel.pr.uconn.edu>

	* configure.in: now does rudimentary check for DB3 library
	if CNID DB option (--enable-cnid-db) is given, with
	option to specify path to DB3 (Jeff)

2001-08-16  Uwe Hees <uwe.hees@rz-online.de>

	* libatalk/cnid: replaced EAGAIN in db result checking with
	DB_LOCK_DEADLOCK as appropriate for db-3.
	* fixed a potential transaction problem in cnidd_add.

2001-08-14  Sam Noble <ns@shadow.org>

	* etc/afpd/directory.c: in afp_mapname and afp_mapid
	convert uid/gid to/from network byte order before actually
	using.  This should hopefully fix a long-standing bug in
	the admin functionality.

2001-08-14  jeff b  <jeff@univrel.pr.uconn.edu>

	* acconfig.h, configure.in, etc/afpd/directory.c,
	etc/afpd/enumerate.c, etc/afpd/file.c, etc/afpd/file.h,
	etc/afpd/filedir.c, etc/afpd/fork.c, etc/afpd/volume.c,
	etc/afpd/volume.h, libatalk/Makefile.am,
	libatalk/cnid/cnid_add.c, libatalk/cnid/cnid_close.c,
	libatalk/cnid/cnid_delete.c, libatalk/cnid/cnid_lookup.c,
	libatalk/cnid/cnid_nextid.c, libatalk/cnid/cnid_open.c,
	libatalk/cnid/cnid_private.h, libatalk/cnid/cnid_update.c:
	DID database and reincluding libatalk/cnid back into
	compiled tree (Uwe Hees)

	* libatalk/cnid/.cvsignore: updated .cvsignore list for
	CNID patch (Jeff)

2001-08-09  Sam Noble <ns@shadow.org>

	* configure.in, acconfig.h: Merged a patch from meeroh@mit.edu
	to fix the kerberos uam build process.

2001-08-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/papd/session.c: prevents papd client from aborting
	during the submission of a print job, therefore preventing