@@ -1,11 +1,12 @@
 /*
- * $Id: cnid_lookup.c,v 1.5 2001-08-16 14:30:29 uhees Exp $
+ * $Id: cnid_lookup.c,v 1.6 2001-08-31 14:58:48 rufustfirefly Exp $
  */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif /* HAVE_CONFIG_H */
 
+#ifdef CNID_DB
 #include <stdio.h>
 #include <string.h>
 #include <sys/param.h>
@@ -115,3 +116,4 @@ cnid_t cnid_lookup(void *CNID,
     syslog(LOG_ERR, "cnid_lookup: looked up did %d, name %s as %d (needed update)", did, name, id);
   return id;
 }
+#endif /* CNID_DB */
